[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/menu_buttons/settings.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/Atarian/SF Atarian System Extended Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/menu_logo.png" type="Texture" id=3]
[ext_resource path="res://assets/menu_buttons/exit_press.png" type="Texture" id=4]
[ext_resource path="res://assets/sounds/ButtonSelect.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/menu_buttons/settings_press.png" type="Texture" id=6]
[ext_resource path="res://scenes/MainBG.tscn" type="PackedScene" id=7]
[ext_resource path="res://scripts/VBoxContainer.gd" type="Script" id=8]
[ext_resource path="res://assets/menu_buttons/exit.png" type="Texture" id=9]
[ext_resource path="res://assets/menu_buttons/start.png" type="Texture" id=10]
[ext_resource path="res://assets/menu_buttons/start_press.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 2 )

[node name="MainMenu" type="Node2D"]
__meta__ = {
"_edit_lock_": true
}

[node name="Background" parent="." instance=ExtResource( 7 )]
margin_top = 0.127258

[node name="Footer" type="Label" parent="."]
margin_left = 346.945
margin_top = 561.185
margin_right = 667.945
margin_bottom = 582.185
custom_fonts/font = SubResource( 1 )
text = "Project By: Jonathan and Aseem."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 177.265
margin_top = 109.307
margin_right = 1251.26
margin_bottom = 283.307
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 0.676
anchor_bottom = 0.581
margin_left = 419.583
margin_top = 236.622
margin_right = 578.583
margin_bottom = 399.622
custom_constants/separation = 20
alignment = 1
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSelectSound" type="AudioStreamPlayer2D" parent="VBoxContainer"]
position = Vector2( -419.583, -236.622 )
stream = ExtResource( 5 )

[node name="StartButton" type="TextureButton" parent="VBoxContainer"]
margin_right = 159.0
margin_bottom = 49.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 69.0
margin_right = 159.0
margin_bottom = 118.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 6 )

[node name="ExitButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 138.0
margin_right = 159.0
margin_bottom = 187.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
